# gw2fulcrum

./: 2025-06.txt  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  generate_offline.sh  publish.sh
src/: generate_offline.sh  lib.rs  main.rs  skills.csv
tests/: deps.rs  update.rs
wix/: main.wxs
